perf: avoid layout shift for avatar image

--- a/style/index.scss
+++ b/style/index.scss
@@ -32,7 +32,6 @@ body {
     margin-bottom: 1em;
   }
   &__avatar {
-    width: 15%;
     border-radius: 10%;
   }
   &__accounts {
